--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -527,18 +527,17 @@
 <section class="terms-section">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-lg-10">
+      <div class="col-lg-10 col-md-12 col-sm-12">
         <h1 class="mb-3 mt-5 pt-5">Cookie Policy</h1>
-        <p class="text">Last Updated: June 14, 2025</p>
+        <p class="text">Last Updated: July 10, 2025</p>
+
         <p>
           The Entity Studios operates across the UK, EU, and India through its registered entities: The Entity Studios Private Limited (India), The-Entity Ltd (UK), and The Entity OÜ (Estonia) (hereinafter referred to as <strong>“The Entity Studios”</strong>).
           We are committed to respecting your privacy and ensuring transparency in how cookies are used across our website.
         </p>
 
         <h2>1. What Are Cookies?</h2>
-        <p>
-          Cookies are small text files stored on your device when you visit a website. They help us improve your browsing experience, remember preferences, and measure website traffic.
-        </p>
+        <p>Cookies are small text files stored on your device when you visit a website. They help us improve your browsing experience, remember preferences, and measure website traffic.</p>
 
         <h2>2. Why We Use Cookies</h2>
         <p>We use cookies only for essential functionality and analytics purposes. Specifically:</p>
@@ -550,52 +549,55 @@
         <p>We do not use cookies to track personal identities, nor do we sell or share any visitor data.</p>
 
         <h2>3. Types of Cookies in Use</h2>
-        <div class="cookie-types-box">
-          <div class="cookie-type">
-            <h4>Essential Cookies</h4>
-            <p>Required for website core functionality (e.g., page loading, session authentication).</p>
-          </div>
-          <div class="cookie-type">
-            <h4>Analytics Cookies</h4>
-            <p>Used via Google Analytics to understand visitor behavior anonymously.</p>
-          </div>
-          <div class="cookie-type">
-            <h4>Functional Cookies</h4>
-            <p>Used for remembering preferences like language or theme.</p>
-          </div>
-        </div>
+        <table class="table table-bordered mt-3">
+          <thead>
+            <tr>
+              <th scope="col">Type</th>
+              <th scope="col">Description</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Essential Cookies</td>
+              <td>Required for website core functionality (e.g., page loading, session auth)</td>
+            </tr>
+            <tr>
+              <td>Analytics Cookies</td>
+              <td>Used via Google Analytics to understand visitor behavior anonymously</td>
+            </tr>
+            <tr>
+              <td>Functional Cookies</td>
+              <td>Used for remembering preferences like language or theme</td>
+            </tr>
+          </tbody>
+        </table>
         <p><strong>Note:</strong> We do not serve ads or use third-party advertising cookies on our site.</p>
 
         <h2>4. Managing Cookies</h2>
-        <p>
-          You can manage or disable cookies directly from your browser settings. Please note, blocking essential cookies may affect the site’s usability.
-        </p>
+        <p>You can manage or disable cookies directly from your browser settings. Please note, blocking essential cookies may affect the site’s usability.</p>
 
         <h2>5. Data Compliance & Security</h2>
-        <p>We maintain compliance with:</p>
         <ul>
           <li>GDPR (EU)</li>
           <li>UK Data Protection Act</li>
           <li>Indian IT & Privacy Guidelines</li>
         </ul>
-        <p>
-          Our production systems follow ISO/IEC 27001:2022 standards and TPN Gold-aligned security practices. We do not store personal data via cookies and take all reasonable precautions to ensure anonymous data processing.
-        </p>
+        <p>Our production systems follow ISO/IEC 27001:2022 standards and TPN Gold-aligned security practices. We do not store personal data via cookies and take all reasonable precautions to ensure anonymous data processing.</p>
 
         <h2>6. Updates to This Policy</h2>
-        <p>
-          This policy may be updated to reflect changes in law, tech tools, or business practices. We encourage you to review this page regularly.
-        </p>
+        <p>This policy may be updated to reflect changes in law, tech tools, or business practices. We encourage you to review this page regularly.</p>
 
         <h2>7. Contact</h2>
-        <p>For questions or concerns, feel free to reach out:</p>
-        <p>Email: <a href="mailto:contact@entity.ltd">contact@entity.ltd</a></p>
+        <p>Cookie Grievance: Users may report cookie-related concerns or request clarification by contacting <a href="mailto:privacy@entity.ltd" style="color: red;">privacy@entity.ltd</a>.</p>
+
+        <p><strong>Anonymization:</strong> Data collected through cookies is anonymized and used strictly for performance monitoring and aggregated analytics. We do not use cookies for profiling or targeted advertising.</p>
 
         <p class="mt-4 mb-4">By continuing to browse our website, you consent to our limited and transparent use of cookies.</p>
       </div>
     </div>
   </div>
 </section>
+
 
 
 
