--- a/legal.html
+++ b/legal.html
@@ -520,97 +520,197 @@
 <section class="terms-section">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-lg-10">
-        <h1 class="mb-3 mt-5 pt-5">Privacy Policy</h1>
-        <p class="text">Last Updated: June 14, 2025</p>
+      <div class="col-lg-10 col-md-12 col-sm-12">
+        <h1 class="mb-3 mt-5 pt-5">Legal and Compliance Disclosure</h1>
+        <p class="text">Last Updated: 10-July-2025</p>
 
+        <h2>1. Introduction</h2>
         <p>
-          This Privacy Policy applies to The Entity Studios Private Limited (India), The-Entity Ltd (UK), and The Entity OÜ (Estonia) 
-          (hereinafter referred to as <strong>“The Entity Studios”</strong>). We are committed to protecting your privacy and ensuring 
-          compliance with applicable data protection laws, including the General Data Protection Regulation (GDPR), the UK Data Protection Act, 
-          and applicable Indian privacy regulations.
+          At The Entity Studios, we are committed to maintaining the highest standards of legal, regulatory,
+          and ethical compliance across all jurisdictions in which we operate — the United Kingdom, Estonia,
+          and India.
+        </p>
+        <p>
+          Our approach is rooted in transparency, robust governance, and proactive risk management. This
+          page outlines our legal standing, regulatory adherence, and internal control commitments, helping
+          partners, clients, and financial institutions evaluate our legitimacy, compliance posture, and
+          operational integrity.
         </p>
 
-        <h2>1. Information We Collect</h2>
+        <h2>2. Corporate Identity and Governance</h2>
+        <p><strong>Registered Legal Entities:</strong></p>
         <ul>
-          <li>Personal Information: Name, email, phone number, and other contact details submitted via forms or email.</li>
-          <li>Technical Data: IP address, browser type, device data, and general analytics.</li>
-          <li>Cookies & Tracking: Anonymous information gathered using Google Analytics (see our Cookie Policy).</li>
+          <li>
+            The-Entity Ltd (United Kingdom)<br>
+            Registration No: 15518633<br>
+            <a href="https://find-and-update.company-information.service.gov.uk/company/15518633" target="_blank" style="color: red;">Company Profile</a><br>
+            Registered Address: 65 London Wall, London, EC2M, UK
+          </li>
+          <li>
+            The Entity OÜ (Estonia)<br>
+            Registration No: 16925243<br>
+            <a href="https://ariregister.rik.ee/eng/company/16925243/The-Entity-O%C3%9C" target="_blank" style="color: red;">Company Profile</a><br>
+            Registered Address: Narva mnt 5, Kesklinna, Tallinn, 10117, Estonia
+          </li>
+          <li>
+            The Entity Studios Private Limited (India)<br>
+            CIN: U62010KA2025PTC199909<br>
+            Registered Address: 004, Sai Shree Alps, Venkateshwara Layout, Mahadevapura, Bangalore – 560048, India
+          </li>
         </ul>
-
-        <h2>2. How We Use Your Information</h2>
-        <ul>
-          <li>To communicate with you regarding services or inquiries</li>
-          <li>To analyze and improve our website experience</li>
-          <li>To comply with legal obligations</li>
-          <li>We do not sell, rent, or profile your personal data.</li>
-        </ul>
-
-        <h2>3. Legal Basis for Processing</h2>
-        <p>We process personal data based on the following legal bases:</p>
-        <ul>
-          <li>Consent (where applicable, such as marketing cookies)</li>
-          <li>Legitimate interests (e.g., service improvement and analytics)</li>
-          <li>Legal obligation</li>
-          <li>Contractual necessity</li>
-        </ul>
-
-        <h2>4. Data Sharing & Third Parties</h2>
-        <p>We do not share your data with third parties, except:</p>
-        <ul>
-          <li>With trusted service providers for hosting and analytics (e.g., Google Analytics)</li>
-          <li>With legal authorities if required by law</li>
-        </ul>
-        <p>All providers we work with are bound by appropriate data protection agreements.</p>
-
-        <h2>5. Data Security</h2>
-        <p>We take data security seriously and follow:</p>
-        <ul>
-          <li>ISO/IEC 27001:2022 certified ISMS practices</li>
-          <li>TPN Gold-aligned security controls</li>
-        </ul>
-        <p>We implement industry-standard security measures, including:</p>
-        <ul>
-          <li>Data encryption</li>
-          <li>Access restrictions</li>
-          <li>Regular security audits</li>
-        </ul>
-
-        <h2>6. Data Retention</h2>
-        <p>We follow defined data retention timelines per our internal Data Retention Policy and securely dispose of data when no longer required.</p>
-
-        <h2>7. Your Rights</h2>
-        <p>Depending on your location, you may have the following rights:</p>
-        <ul>
-          <li>Access: Request access to your personal data.</li>
-          <li>Correction: Request corrections to inaccurate data.</li>
-          <li>Deletion: Request deletion of your personal data.</li>
-          <li>Objection & Restriction: Object to or restrict certain data processing activities.</li>
-          <li>Data Portability: Request a copy of your data in a portable format.</li>
-        </ul>
-        <p>
-          To exercise these rights, please contact us at 
-          <a href="mailto:legal@entity.ltd" style="color: red;">legal@entity.ltd</a> or request access via our secure 
-          <a href="https://trust.the-entity.studio/" target="_blank" style="color: red;">Trust Portal</a> (available to partners under NDA).
+        <p><strong>Governance & Structure</strong><br>
+        The Entity Studios is governed by a formally registered board and executive leadership team across
+        all operating entities. Board decisions, shareholder agreements, and organizational structure
+        documents are securely maintained and made available to verified stakeholders via our 
+        <a href="https://trust.the-entity.studio/item/corporate-identity" target="_blank" style="color: red;">Trust Portal</a>, subject to a Non-Disclosure Agreement (NDA).
+        </p>
+        <p><strong>Key Management & Leadership</strong><br>
+        Information about our leadership team, including director profiles and strategic roles, is available
+        upon request under NDA via our <a href="https://trust.the-entity.studio/" target="_blank" style="color: red;">Trust Portal</a>.
         </p>
 
-        <h2>8. International Data Transfers</h2>
-        <p>We operate across the UK, EU, and India. Data transfers between these regions are safeguarded under GDPR 
-        and applicable regional laws.</p>
+        <h2>Foundational Documentation</h2>
+        <p>The Entity Studios maintains key legal and governance documents for all its registered entities,
+        ensuring transparency and accountability across jurisdictions. These documents include:</p>
+        <ul>
+          <li>Articles of Incorporation</li>
+          <li>Shareholder Agreements</li>
+          <li>Board Resolutions</li>
+          <li>Company Bylaws / Operating Agreements</li>
+        </ul>
+        <p>Access to these materials is granted to authorized stakeholders upon request via our 
+        <a href="https://trust.the-entity.studio/item/corporate-identity" target="_blank" style="color: red;">Trust Portal</a>, subject to a Non-Disclosure Agreement (NDA). This ensures appropriate confidentiality while
+        supporting due diligence, investor reviews, and regulatory inquiries.</p>
 
-        <h2>9. Changes to This Policy</h2>
-        <p>We may update this policy as needed. The latest version will always be available on our website.</p>
+        <h2>3. Regulatory Compliance and Risk Management</h2>
+        <p><strong>Compliance with Jurisdictional Regulations</strong></p>
+        <ul>
+          <li>EU GDPR (General Data Protection Regulation)</li>
+          <li>India’s DPDP Act (Digital Personal Data Protection)</li>
+          <li>UK & Estonia corporate governance requirements</li>
+          <li>AML/CTF regulations under global financial compliance standards</li>
+        </ul>
+        <p><strong>Certifications and Security Standards</strong></p>
+        <ul>
+          <li>ISO/IEC 27001:2022 Certified ISMS</li>
+          <li>Trusted Partner Network (TPN) – Blue Compliant</li>
+          <li>Fully aligned with GDPR and India's DPDP Act for privacy and data security</li>
+        </ul>
+        <p><strong>Internal Control Systems</strong></p>
+        <ul>
+          <li>ISO/IEC 27002:2022 security controls</li>
+          <li>TPN MPA Content Security Guidelines</li>
+          <li>COSO-style oversight principles ensuring integrity, accountability, and policy-driven enforcement</li>
+        </ul>
+        <p><strong>AML/CTF and Sanctions Compliance</strong></p>
+        <ul>
+          <li>Know Your Customer (KYC) and Customer Due Diligence (CDD) procedures for financial onboarding</li>
+          <li>Automated sanctions screening against global watchlists</li>
+          <li>Systems for suspicious transaction monitoring and reporting, aligned with international regulatory expectations</li>
+        </ul>
 
-        <h2>10. Contact Us</h2>
-        <p>For privacy concerns, you can reach us at:</p>
-        <p><strong>The Entity Studios</strong> (UK, EU, and India)</p>
-        <p>Email: <a href="mailto:legal@entity.ltd" style="color: red;">legal@entity.ltd</a></p>
+        <h2>Risk Management Framework</h2>
+        <ul>
+          <li>Annual compliance reviews and threat assessments</li>
+          <li>Corrective action tracking and periodic remediation reporting</li>
+          <li>Continuous improvement through internal policy updates and threat modeling</li>
+        </ul>
+        <p><strong>Internal Audits & Reports</strong><br>
+        Internal audits are conducted at regular intervals to validate compliance effectiveness and security
+        control health. Internal audit reports are retained in our TPN Internal Binder and are available upon
+        request to authorized stakeholders under NDA via the <a href="https://trust.the-entity.studio/item/corporate-identity" target="_blank" style="color: red;">Trust Portal</a>.
+        </p>
 
-        <p class="mt-4 mb-4">By using our services, you acknowledge and agree to this Privacy Policy.</p>
+        <h2>4. Privacy, Security, and Data Handling</h2>
+        <p><strong>Privacy Governance</strong></p>
+        <ul>
+          <li>Comprehensive, publicly available Privacy Policy and Cookie Policy</li>
+          <li>Full compliance with EU GDPR, India’s DPDP Act, and cross-border data transfer regulations</li>
+        </ul>
+        <p><strong>Data Protection Controls</strong></p>
+        <ul>
+          <li>Data minimization: Only the data necessary for operational or legal purposes is collected and processed</li>
+          <li>Defined data retention timelines are implemented for all personal and project data</li>
+          <li>Secure disposal and erasure procedures in place at the end of retention periods</li>
+          <li>Data breach response protocol in line with GDPR and DPDP notification requirements</li>
+          <li>Robust Data Processing Agreements (DPAs) signed with all third-party service providers</li>
+        </ul>
+        <p><strong>Cybersecurity & Access Controls</strong></p>
+        <ul>
+          <li>Multi-Factor Authentication (MFA) enforced across key systems</li>
+          <li>Endpoint encryption and anti-malware controls for all work devices</li>
+          <li>Role-based access control (RBAC) ensuring least privilege</li>
+          <li>Alignment with PCI DSS security standards (for relevant payment systems)</li>
+          <li>Scheduled penetration testing and vulnerability assessments</li>
+        </ul>
+
+        <h2>User Rights and Grievance Redressal</h2>
+        <ul>
+          <li>Request access, correction, or deletion of their data</li>
+          <li>Escalate data protection issues to the Data Protection Officer or legal team</li>
+          <li>View data handling practices transparently via the <a href="privacy-policy.html" style="color: red;">Privacy Policy</a></li>
+        </ul>
+        <p><strong>Additional Documentation (available upon request via <a href="https://trust.the-entity.studio/item/corporate-identity" target="_blank" style="color: red;">Trust Portal</a>):</strong></p>
+        <ul>
+          <li>Data Protection Policy</li>
+          <li>Data Protection Impact Assessments (DPIAs)</li>
+          <li>Records of Processing Activities (RoPA)</li>
+        </ul>
+
+        <h2>5. Intellectual Property</h2>
+        <p><strong>Ownership & Assignment</strong></p>
+        <ul>
+          <li>IP rights are retained or transferred as per agreement scope</li>
+          <li>All deliverables are covered under confidentiality, assignment, and non-compete clauses</li>
+          <li>Custom IP assignment clauses are included in contracts and available upon request via the <a href="https://trust.the-entity.studio/item/corporate-identity" target="_blank" style="color: red;">Trust Portal</a></li>
+        </ul>
+        <p><strong>Open-Source Software (OSS) Management</strong></p>
+        <ul>
+          <li>Only license-compliant OSS is used in our workflows</li>
+          <li>OSS components are reviewed for security and legal risk prior to inclusion</li>
+          <li>A formal approval workflow governs the integration of any OSS in production or commercial builds</li>
+        </ul>
+        <p><strong>Licensing</strong></p>
+        <ul>
+          <li>Licensing terms are customized for each engagement based on IP ownership and delivery structure</li>
+          <li>Documentation related to IP licensing, transfer, and NDAs is accessible under NDA via the <a href="https://trust.the-entity.studio/item/corporate-identity" target="_blank" style="color: red;">Trust Portal</a></li>
+        </ul>
+
+        <h2>6. Financial Due Diligence (Available via <a href="https://trust.the-entity.studio/item/corporate-identity" target="_blank" style="color: red;">Trust Portal</a>)</h2>
+        <p>
+          As a newly established but rapidly growing company, The Entity Studios is in the early phases of its financial maturity cycle. While certain financial disclosures such as audited financial statements or
+          debt agreements are not currently applicable, we maintain the following commitments to future
+          partners and investors:
+        </p>
+        <p><strong>Currently Available (under NDA):</strong></p>
+        <ul>
+          <li>Company Incorporation Documents for all registered entities (UK, Estonia, India)</li>
+          <li>Basic Tax Registration Certificates (PAN, GST for India; VAT where applicable)</li>
+          <li>Proof of Active Business Operations, including client engagement records and operational infrastructure</li>
+          <li>ISO/IEC 27001:2022 Certification and TPN Compliance documents validating maturity of our security and governance systems</li>
+        </ul>
+        <p><strong>To Be Made Available (in upcoming phases):</strong></p>
+        <ul>
+          <li>Audited Financial Statements (Expected FY 2025–26)</li>
+          <li>Detailed Financial Disclosures and Contractual Agreements (as projects scale)</li>
+          <li>License & Permit Filings (as needed per jurisdiction)</li>
+        </ul>
+        <p>Additional documentation is available upon request via our <a href="https://trust.the-entity.studio/item/corporate-identity" target="_blank" style="color: red;">Trust Portal</a> under a Non-Disclosure Agreement (NDA).</p>
+
+        <h2>7. Contact</h2>
+        <p>
+          For all legal, regulatory, or compliance-related inquiries, please contact our team at:
+          <a href="mailto:legal@entity.ltd" style="color: red;">legal@entity.ltd</a> or request specific documentation through our secure 
+          <a href="https://trust.the-entity.studio/item/corporate-identity" target="_blank" style="color: red;">Trust Portal</a>.
+        </p>
+
+        <p class="mt-4 mb-4"><strong>Disclaimer:</strong> The information provided on this page is intended for general informational purposes only. It does not constitute legal, financial, or tax advice, nor does it create any binding legal obligation. Visitors are encouraged to consult qualified professionals for tailored guidance related to their specific needs or regulatory requirements.</p>
       </div>
     </div>
   </div>
 </section>
+
+
 
 
 
@@ -1017,6 +1117,7 @@
 
                     <div class="col-md-4 d-flex justify-content-center justify-content-md-end gap-3 flex-wrap small darkgrey">
                         <a href="termsandconditions.html" target="_blank" class="text-decoration-none" style="color: #999999;">Terms and Conditions</a>
+                        <a href="legal.html" target="_blank" class="text-decoration-none" style="color: #999999;">Legal</a>
                         <a href="privacy-policy.html" target="_blank" class="text-decoration-none" style="color: #999999;">Privacy Policy</a>
                         <a href="cookie-policy.html" target="_blank" class="text-decoration-none" style="color: #999999;">Cookie Policy</a>
                     </div>
