--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -545,7 +545,7 @@
 
         <h2>3. Intellectual Property Rights</h2>
         <ul>
-          <li>All content, including text, graphics, logos, and media on this website, is the property of The Entity Studios unless otherwise stated.</li>
+          <li>All content, including text, graphics, logos, and media on this website, is the property of The Entity Ltd unless otherwise stated.</li>
           <li>You may not copy, distribute, or modify our content without prior written consent.</li>
         </ul>
 
@@ -585,7 +585,7 @@
 
         <h2>8. Limitation of Liability</h2>
         <ul>
-          <li>The Entity Studios is not responsible for any direct, indirect, incidental, or consequential damages resulting from your use of our website or services.</li>
+          <li>The Entity Studios shall not be liable for any indirect, incidental, or consequential damages arising out of or related to the use of our services</li>
           <li>We do not guarantee uninterrupted or error-free access to our website.</li>
         </ul>
 
@@ -601,14 +601,20 @@
 
         <h2>11. Governing Law and Jurisdiction</h2>
         <ul>
-          <li>These Terms are governed by the laws of the UK, EU, and India, depending on the applicable jurisdiction.</li>
-          <li>Any disputes arising from these Terms will be resolved in the respective jurisdiction's legal system.</li>
+          <li>These Terms shall be governed by and construed in accordance with the applicable laws of India, the United Kingdom, and Estonia, depending on the jurisdiction in which the relevant services or contractual obligations are rendered.</li>
+          <li>Any disputes arising out of or in connection with these Terms shall, subject to the nature of engagement, be subject to the exclusive jurisdiction of the competent courts in Bengaluru (India), Tallinn (Estonia), or London (United Kingdom).</li>
         </ul>
 
         <h2>12. Contact Information</h2>
         <p>If you have any questions regarding these Terms, please contact us:</p>
         <p><strong>The Entity Studios</strong> (Registered as The Entity OÜ in the EU, The-Entity Ltd. in the UK, and The Entity Studios Pvt. Ltd. in India)</p>
         <p>Email: <a href="mailto:contact@entity.ltd">contact@entity.ltd</a></p>
+
+        <h2>13. Additional Clauses</h2>
+        <ul>
+          <li>Service Availability: While we aim to provide uninterrupted access to our services, we do not guarantee constant availability and may suspend services for maintenance or upgrades.</li>
+          <li>Compliance Resources: For full details of our compliance and governance framework, please visit our <a href="https://trust.the-entity.studio/" target="_blank" style="color: red;">Trust Portal</a>.</li>
+        </ul>
 
         <p class="mt-4 mb-4">By using our website or services, you acknowledge that you have read, understood, and agreed to these Terms and Conditions.</p>
       </div>
