--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -486,6 +486,7 @@
     font-weight: 600;
   }
 
+
   /* Paragraph and list styles */
   .terms-section p,
   .terms-section ul,
@@ -549,28 +550,30 @@
         <p>We do not use cookies to track personal identities, nor do we sell or share any visitor data.</p>
 
         <h2>3. Types of Cookies in Use</h2>
-        <table class="table table-bordered mt-3">
-          <thead>
-            <tr>
-              <th scope="col">Type</th>
-              <th scope="col">Description</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Essential Cookies</td>
-              <td>Required for website core functionality (e.g., page loading, session auth)</td>
-            </tr>
-            <tr>
-              <td>Analytics Cookies</td>
-              <td>Used via Google Analytics to understand visitor behavior anonymously</td>
-            </tr>
-            <tr>
-              <td>Functional Cookies</td>
-              <td>Used for remembering preferences like language or theme</td>
-            </tr>
-          </tbody>
-        </table>
+<table class="table table-bordered mt-3" style="background-color: #000; color: #fff; border-color: #444;">
+  <thead>
+    <tr>
+      <th scope="col" style="background-color: #111; color: #fff; border: 1px solid #444;">Type</th>
+      <th scope="col" style="background-color: #111; color: #fff; border: 1px solid #444;">Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="background-color: #000; color: #fff; border: 1px solid #444;">Essential Cookies</td>
+      <td style="background-color: #000; color: #fff; border: 1px solid #444;">Required for website core functionality (e.g., page loading, session auth)</td>
+    </tr>
+    <tr>
+      <td style="background-color: #000; color: #fff; border: 1px solid #444;">Analytics Cookies</td>
+      <td style="background-color: #000; color: #fff; border: 1px solid #444;">Used via Google Analytics to understand visitor behavior anonymously</td>
+    </tr>
+    <tr>
+      <td style="background-color: #000; color: #fff; border: 1px solid #444;">Functional Cookies</td>
+      <td style="background-color: #000; color: #fff; border: 1px solid #444;">Used for remembering preferences like language or theme</td>
+    </tr>
+  </tbody>
+</table>
+
+
         <p><strong>Note:</strong> We do not serve ads or use third-party advertising cookies on our site.</p>
 
         <h2>4. Managing Cookies</h2>
@@ -1006,6 +1009,7 @@
 
                     <div class="col-md-4 d-flex justify-content-center justify-content-md-end gap-3 flex-wrap small darkgrey">
                         <a href="termsandconditions.html" target="_blank" class="text-decoration-none" style="color: #999999;">Terms and Conditions</a>
+                        <a href="legal.html" target="_blank" class="text-decoration-none" style="color: #999999;">Legal</a>
                         <a href="privacy-policy.html" target="_blank" class="text-decoration-none" style="color: #999999;">Privacy Policy</a>
                         <a href="cookie-policy.html" target="_blank" class="text-decoration-none" style="color: #999999;">Cookie Policy</a>
                     </div>
