--- a/services-backup.html
+++ b/services-backup.html
@@ -1660,6 +1660,7 @@ const swiper = new Swiper(".mySwiper", {
 
                     <div class="col-md-4 d-flex justify-content-center justify-content-md-end gap-3 flex-wrap small darkgrey">
                         <a href="termsandconditions.html" target="_blank" class="text-decoration-none" style="color: #999999;">Terms and Conditions</a>
+                        <a href="legal.html" target="_blank" class="text-decoration-none" style="color: #999999;">Legal</a>
                         <a href="privacy-policy.html" target="_blank" class="text-decoration-none" style="color: #999999;">Privacy Policy</a>
                         <a href="cookie-policy.html" target="_blank" class="text-decoration-none" style="color: #999999;">Cookie Policy</a>
                     </div>
