--- a/legal.html
+++ b/legal.html
@@ -777,21 +777,21 @@
                     <h2><i class="fas fa-building text-success icon"></i>2. Corporate Identity and Governance</h2>
                     <div class="company-section">
                         <div class="company-box">
-                            <h3><a href="https://find-and-update.company-information.service.gov.uk/company/15518633" target="_blank">The-Entity Ltd (United Kingdom)</a></h3>
+                            <h3><a href="https://find-and-update.company-information.service.gov.uk/company/15518633" target="_blank" class="glow-text">The-Entity Ltd (United Kingdom)</a></h3>
                             <ul>
                                 <li>Registration No: 15518633</li>
                                 <li>Registered Address: 65 London Wall, London, EC2M, UK</li>
                             </ul>
                         </div>
                         <div class="company-box">
-                            <h3><a href="https://ariregister.rik.ee/eng/company/16925243/The-Entity-O%C3%9C" target="_blank">The Entity OÜ (Estonia)</a></h3>
+                            <h3><a href="https://ariregister.rik.ee/eng/company/16925243/The-Entity-O%C3%9C" target="_blank" class="glow-text">The Entity OÜ (Estonia)</a></h3>
                             <ul>
                                 <li>Registration No: 16925243</li>
                                 <li>Registered Address: Narva mnt 5, Kesklinna, Tallinn, 10117, Estonia</li>
                             </ul>
                         </div>
                         <div class="company-box">
-                            <h3><a href="https://the-entity.studio/" target="_blank">The Entity Studios Private Limited (India)</a></h3>
+                            <h3><a href="https://the-entity.studio/" target="_blank" class="glow-text">The Entity Studios Private Limited (India)</a></h3>
                             <ul>
                                 <li>CIN: U62010KA2025PTC199909</li>
                                 <li>Registered Address: 004, Sai Shree Alps, Venkateshwara Layout, Mahadevapura, Bangalore – 560048, India</li>
