--- a/services.html
+++ b/services.html
@@ -704,7 +704,7 @@
 
       <!-- Slide 1 -->
       <div class="swiper-slide">
-        <div class="accordion-card-mob" style="background-image: url('assets/img/home-1/service/animationservice2.gif');">
+        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard7.jpg');">
           <div class="overlay"></div>
           <div class="accordion-title-mob">🛠️ Rigging & <span>Character setup</span></div>
           <div class="accordion-body-mob">
@@ -721,13 +721,13 @@
 
       <!-- Slide 2 -->
       <div class="swiper-slide">
-        <div class="accordion-card-mob" style="background-image: url('assets/img/home-1/service/animationservice2.gif');">
+        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard3.jpg');">
           <div class="overlay"></div>
           <div class="accordion-title-mob">⚙️ Technical <span>integration</span></div>
           <div class="accordion-body-mob">
             <ul>
               <li>Animation implementation and state machine setup.</li>
-              <li>Ik/fk blending and procedural animation workflows.</li>
+              <li>IK/FK blending and procedural animation workflows.</li>
               <li>Retargeting and optimizing animation for game engines.</li>
               <li>Blueprint and animation graph setup for seamless interactions.</li>
               <li>Root motion and physics-based movement integration.</li>
@@ -738,7 +738,7 @@
 
       <!-- Slide 3 -->
       <div class="swiper-slide">
-        <div class="accordion-card-mob" style="background-image: url('assets/img/home-1/service/animationservice2.gif');">
+        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard5.jpg');">
           <div class="overlay"></div>
           <div class="accordion-title-mob">🎬 Cinematic & <span>Gameplay animation</span></div>
           <div class="accordion-body-mob">
@@ -776,7 +776,7 @@
 
 </section>
 
-<!-- Motion Solutions Section Heading -->
+<!-- Motion Solutions Section Heading  Only Mobile-->
 <div class="container-fluid mobile-only pt-4 pb-2 px-3 text-center">
   <h4 class="text-white fw-bold mb-2 tz-itm-title tz-itm-anim"  id="mob-service1" style="font-size: 1.4rem;">
     <span class="color-red"> ANIMATION </span> SOLUTIONS
@@ -792,7 +792,7 @@
     <!-- Card 1 -->
     <div class="accordion-card" data-index="0">
       <button class="accordion-btn" onclick="toggleCard(this)">
-        <img class="thumbnail" src="assets/img/breadcrumb.avif" alt="Rigging thumbnail">
+        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail1.jpg" alt="Rigging thumbnail">
         <div class="toggle-icon">▼</div>
 
         <div class="accordion-title">🛠️ Rigging & <span>Character setup</span></div>
@@ -812,7 +812,7 @@
     <!-- Card 2 -->
     <div class="accordion-card" data-index="1">
       <button class="accordion-btn" onclick="toggleCard(this)">
-        <img class="thumbnail" src="assets/img/breadcrumb.avif" alt="Integration thumbnail">
+        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail2.jpg" alt="Integration thumbnail">
         <div class="toggle-icon">▼</div>
 
         <div class="accordion-title">⚙️ Technical <span>integration</span></div>
@@ -820,7 +820,7 @@
         <div class="accordion-body">
           <ul>
             <li>Animation implementation and state machine setup.</li>
-            <li>Ik/fk blending and procedural animation workflows.</li>
+            <li>IK/FK blending and procedural animation workflows.</li>
             <li>Retargeting and optimizing animation for game engines.</li>
             <li>Blueprint and animation graph setup for seamless interactions.</li>
             <li>Root motion and physics-based movement integration.</li>
@@ -832,7 +832,7 @@
     <!-- Card 3 -->
     <div class="accordion-card" data-index="2">
       <button class="accordion-btn" onclick="toggleCard(this)">
-        <img class="thumbnail" src="assets/img/breadcrumb.avif" alt="Animation thumbnail">
+        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail3.jpg" alt="Animation thumbnail">
         <div class="toggle-icon">▼</div>
 
         <div class="accordion-title">🎬 Cinematic & <span>Gameplay animation</span></div>
@@ -870,10 +870,10 @@
 <img id="bg-image-replacement" class="hide-mobile" src="assets/img/home-3/bgred.png" alt="redbg">
 
   <!-- ✅ Overlay paragraph -->
-  <p class="overlay-text2  hide-mobile tz-itm-title tz-itm-anim">From raw capture data to polished performance, our mocap solutions deliver clean, <br> expressive animation, ready for seamless integration across gameplay, cinematics, and virtual production.</p>
+  <p class="hide-mobile overlay-text2 tz-itm-title tz-itm-anim">From raw capture data to polished performance, our mocap solutions deliver clean, <br> expressive animation, ready for seamless integration across gameplay, cinematics, and virtual production.</p>
 
   <!-- Container for the content -->
-  <div class="container  hide-mobile" style="max-width: 1200px;">
+  <div class="container hide-mobile" style="max-width: 1200px;">
     <div class="gt-team-wrapper position-relative">
 
       <!-- Swiper Slider Wrapper -->
@@ -889,7 +889,7 @@
 
       <!-- Slide 1 -->
       <div class="swiper-slide">
-        <div class="accordion-card-mob" style="background-image: url('assets/img/home-1/service/animationservice2.gif');">
+        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard8.jpg');">
           <div class="overlay"></div>
           <div class="accordion-title-mob">🎯 Motion capture <span>cleanup & processing</span></div>
           <div class="accordion-body-mob">
@@ -904,7 +904,7 @@
 
       <!-- Slide 2 -->
       <div class="swiper-slide">
-        <div class="accordion-card-mob" style="background-image: url('assets/img/home-1/service/animationservice2.gif');">
+        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard6.jpg');">
           <div class="overlay"></div>
           <div class="accordion-title-mob">🎯 Retargeting & <span>motion editing</span></div>
           <div class="accordion-body-mob">
@@ -919,7 +919,7 @@
 
       <!-- Slide 3 -->
       <div class="swiper-slide">
-        <div class="accordion-card-mob" style="background-image: url('assets/img/home-1/service/animationservice2.gif');">
+        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard2.jpg');">
           <div class="overlay"></div>
           <div class="accordion-title-mob">🎯 Facial motion <span>capture solutions</span></div>
           <div class="accordion-body-mob">
@@ -935,7 +935,7 @@
 
       <!-- Slide 4 -->
       <div class="swiper-slide">
-        <div class="accordion-card-mob" style="background-image: url('assets/img/home-1/service/animationservice2.gif');">
+        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard4.jpg');">
           <div class="overlay"></div>
           <div class="accordion-title-mob">🎯 Cinematic & <span>gameplay animation</span></div>
           <div class="accordion-body-mob">
@@ -990,7 +990,7 @@
     <!-- Card 1 -->
     <div class="accordion-card" data-index="0">
       <button class="accordion-btn" onclick="toggleCard(this)">
-        <img class="thumbnail" src="assets/img/breadcrumb.avif" alt="Motion capture thumbnail">
+        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail7.jpg" alt="Motion capture thumbnail">
         <div class="toggle-icon">▼</div>
         <div class="accordion-title">🎯 Motion capture <span>cleanup & processing</span></div>
         <div class="accordion-body">
@@ -1006,7 +1006,7 @@
     <!-- Card 2 -->
     <div class="accordion-card" data-index="1">
       <button class="accordion-btn" onclick="toggleCard(this)">
-        <img class="thumbnail" src="assets/img/breadcrumb.avif" alt="Retargeting">
+        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail4.jpg" alt="Retargeting">
         <div class="toggle-icon">▼</div>
         <div class="accordion-title">🎯 Retargeting & <span>motion editing</span></div>
         <div class="accordion-body">
@@ -1022,7 +1022,7 @@
     <!-- Card 3 -->
     <div class="accordion-card" data-index="2">
       <button class="accordion-btn" onclick="toggleCard(this)">
-        <img class="thumbnail" src="assets/img/breadcrumb.avif" alt="Facial motion capture">
+        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail5.jpg" alt="Facial motion capture">
         <div class="toggle-icon">▼</div>
         <div class="accordion-title">🎯 Facial motion <span>capture solutions</span></div>
         <div class="accordion-body">
@@ -1039,7 +1039,7 @@
     <!-- Card 4 -->
     <div class="accordion-card" data-index="3">
       <button class="accordion-btn" onclick="toggleCard(this)">
-        <img class="thumbnail" src="assets/img/breadcrumb.avif" alt="Gameplay animation">
+        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail6.jpg" alt="Gameplay animation">
         <div class="toggle-icon">▼</div>
         <div class="accordion-title">🎯 Cinematic & <span>gameplay animation</span></div>
         <div class="accordion-body">
