--- a/services.html
+++ b/services.html
@@ -283,28 +283,60 @@
 
 
 <style>
-          .responsive-hero {
-  background-image: url('assets/img/home-1/hero/services-bg.avif'); /* Adjust if needed */
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  min-height: 30vh; /* Mobile default */
-}
-
-/* For tablets and up (768px+) */
-@media (min-width: 768px) {
   .responsive-hero {
-    min-height: 85vh;
+    position: relative;
+    min-height: 30vh;
+    background-image: url('assets/img/home-1/hero/services_bg.avif'); /* fallback image path */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    overflow: hidden;
   }
-}
 
+  @media (min-width: 768px) {
+    .responsive-hero {
+      min-height: 85vh;
+    }
+  }
+
+  .responsive-hero video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: 0;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+    display: block;
+  }
+
+  .hero-content {
+    position: relative;
+    z-index: 1;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
 </style>
+
+
 
 <section>
         <div id="smooth-wrapper">
             <div id="smooth-content">
-                <div class="hero-section hero-1 responsive-hero"></div>
-
+<div class="hero-section hero-1 responsive-hero">
+  <video autoplay muted loop playsinline>
+    <source src="assets/img/home-1/hero/Logo_AIc.mp4" type="video/mp4">
+    <!-- The background image will be used if video fails -->
+  </video>
+  <div class="hero-content">
+  </div>
+</div>
 
 
 
@@ -668,7 +700,6 @@
                 </div>
             </div>
        </section>
-
 
 
 
