--- a/company.html
+++ b/company.html
@@ -457,26 +457,63 @@
 
 
 <style>
-    .responsive-hero {
-  background-image: url('assets/img/home-1/hero/company-bg.avif'); /* Adjust if needed */
+.responsive-hero {
+  position: relative;
+  min-height: 50vh;
+  background-image: url('assets/img/home-1/hero/TESHero_Bg.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  min-height: 30vh; /* Mobile default */
+  overflow: hidden;
 }
 
-/* For tablets and up (768px+) */
+/* Hide video by default */
+.responsive-hero video {
+  display: none;
+}
+
+/* Show video only on screens ≥768px */
 @media (min-width: 768px) {
   .responsive-hero {
     min-height: 85vh;
   }
+
+  .responsive-hero video {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+    z-index: 0;
+  }
 }
 
+.hero-content {
+  position: relative;
+  z-index: 1;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
 </style>
 
-        <div id="smooth-wrapper">
-            <div id="smooth-content">
-<section class="hero-section hero-1 responsive-hero"></section>
+<div id="smooth-wrapper">
+  <div id="smooth-content">
+    <div class="hero-section hero-1 responsive-hero">
+      <video autoplay muted loop playsinline aria-hidden="true">
+        <source src="assets/img/home-1/hero/Logo_AI.mp4" type="video/mp4">
+        <!-- No need for fallback inside <video> tag; background image already handles it -->
+      </video>
+    </div>
+
+
 
 
 
@@ -912,8 +949,28 @@
         </div>
 
        
+<!-- GT Clients Section Start -->
+<section class="gt-game-section section-padding fix py-5">
+  <div class="container">
+    <div class="gt-section-title-2 text-center">
+      <h6 class="subtitle tz-sub-tilte tz-sub-anim text-uppercase tx-subTitle">Our</h6>
+      <h2 class="tx-title sec_title tz-itm-title tz-itm-anim">Clients</h2>
+    </div>
 
-
+    <div class="container-fluid py-5">
+      <div class="logo-carousel-wrapper">
+        <div class="logo-track" id="logoTrack1">
+          <!-- Initial Logos for Section 1 -->
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/brand/b-1.avif" alt="Logo 1"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/brand/b-2.avif" alt="Logo 2"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/brand/b-3.avif" alt="Logo 3"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/brand/b-4.avif" alt="Logo 4"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- GT Clients Section End -->
 
 
 <section class="gaming-hero-section">
@@ -985,79 +1042,17 @@
 
 
 
-  <style>
-    /* ===== Logo Carousel Styles ===== */
-    .logo-carousel-wrapper {
-      overflow: hidden;
-      position: relative;
-      width: 100%;
-      max-width: 100vw;
-      background-color: #0a0a0a00; /* Dark background for contrast */
-    }
-
-    .logo-track {
-      display: flex;
-      width: max-content;
-      animation: scroll-left 50s linear infinite;
-    }
-
-    .logo-item {
-      max-height: 120px;
-      width: auto;
-      height: 120px;
-      flex: 0 0 auto;
-      padding: 0 40px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .logo-item img {
-      max-height: 180px;
-      width: auto;
-      filter: grayscale(100%);
-      transition: filter 0.3s ease-in-out;
-    }
-
-    .logo-item img:hover {
-      filter: grayscale(0%);
-    }
-
-    @keyframes scroll-left {
-      0% {
-        transform: translateX(0);
-      }
-      100% {
-        transform: translateX(-50%);
-      }
-    }
-  </style>
-
-
-
-
-
-
-
-
-
-<!-- GT brand logo Section End -->
-
-
-
-
-
-
-
+<!-- JavaScript to Clone Logos -->
 <script>
-  document.addEventListener('DOMContentLoaded', function () {
-    const track = document.getElementById('logoTrack');
-    if (track) {
-      track.innerHTML += track.innerHTML; // Duplicate logos once for seamless scroll
-    }
-  });
+  window.onload = () => {
+    const track1 = document.getElementById('logoTrack1');
+    const track2 = document.getElementById('logoTrack2');
+    
+    // Clone and append logos for both sections
+    track1.innerHTML += track1.innerHTML;
+    track2.innerHTML += track2.innerHTML;
+  }
 </script>
-
 
 
 
@@ -1426,10 +1421,13 @@
 <footer class="entity-footer gt-footer-section">
     <div class="container">
 
-        <!-- Logo Carousel Section -->
-        <div class="logo-carousel-wrapper">
-            <div class="logo-track" id="logoTrack2">
-          <!-- Initial Logos -->
+<!-- Footer Logo Section Start -->
+<section class="gt-game-section section-padding fix py-5">
+  <div class="container">
+    <div class="container-fluid py-5">
+      <div class="logo-carousel-wrapper">
+        <div class="logo-track" id="logoTrack2">
+          <!-- Initial Logos for Section 2 -->
           <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (1).png" alt="Logo 1"></div>
           <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (2).png" alt="Logo 2"></div>
           <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (3).png" alt="Logo 3"></div>
@@ -1442,16 +1440,100 @@
           <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (10).png" alt="Logo 10"></div>
           <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (11).png" alt="Logo 11"></div>
           <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (12).png" alt="Logo 12"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (13).png" alt="Logo 13"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (14).png" alt="Logo 14"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (15).png" alt="Logo 15"></div>
-          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (16).png" alt="Logo 16"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Footer Logo Section End -->
 
+<!-- JavaScript to Clone Logos and Create Seamless Loop -->
+<script>
+  window.onload = () => {
+    // Clone logos for Section 1
+    const track1 = document.getElementById('logoTrack1');
+    const logos1 = track1.children; // Get all logo items in Section 1
+    for (let i = 0; i < logos1.length; i++) {
+      track1.appendChild(logos1[i].cloneNode(true)); // Clone and append each logo item
+    }
 
-            </div>
-            </div>
+    // Clone logos for Section 2
+    const track2 = document.getElementById('logoTrack2');
+    const logos2 = track2.children; // Get all logo items in Section 2
+    for (let i = 0; i < logos2.length; i++) {
+      track2.appendChild(logos2[i].cloneNode(true)); // Clone and append each logo item
+    }
+  };
+</script>
 
+<style>
+  /* ===== Logo Carousel Styles ===== */
+  .logo-carousel-wrapper {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    max-width: 100vw;
+    background-color: #0a0a0a00; /* Dark background for contrast */
+  }
 
+  .logo-track {
+    display: flex;
+    width: max-content;
+    will-change: transform; /* Optimizing for animation */
+  }
+
+  /* Animation for Section 1 (Clients Section) */
+  #logoTrack1 {
+    animation: scroll-left-1 30s linear infinite; /* Adjusted speed for faster scroll */
+  }
+
+  /* Animation for Section 2 (Footer Clients Section) */
+  #logoTrack2 {
+    animation: scroll-left-2 40s linear infinite; /* Adjusted speed for footer scroll */
+  }
+
+  .logo-item {
+    max-height: 120px;
+    width: auto;
+    height: 120px;
+    flex: 0 0 auto;
+    padding: 0 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .logo-item img {
+    max-height: 180px;
+    width: auto;
+    filter: grayscale(100%);
+    transition: filter 0.3s ease-in-out;
+  }
+
+  .logo-item img:hover {
+    filter: grayscale(0%);
+  }
+
+  /* Keyframes for Section 1 */
+  @keyframes scroll-left-1 {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-50%);
+    }
+  }
+
+  /* Keyframes for Section 2 */
+  @keyframes scroll-left-2 {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-50%);
+    }
+  }
+</style>
         <!-- Main Footer Row -->
         <div class="row">
             <!-- Left Column -->
