--- a/company.html
+++ b/company.html
@@ -948,8 +948,57 @@
             </div>
         </div>
 
+  <style>
+    /* ===== Logo Carousel Styles ===== */
+    .logo-carousel-wrapper {
+      overflow: hidden;
+      position: relative;
+      width: 100%;
+      max-width: 100vw;
+      background-color: #0a0a0a00; /* Dark background for contrast */
+    }
+
+    .logo-track {
+      display: flex;
+      width: max-content;
+      animation: scroll-left 90s linear infinite;
+    }
+
+    .logo-item {
+      max-height: 120px;
+      width: auto;
+      height: 120px;
+      flex: 0 0 auto;
+      padding: 0 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .logo-item img {
+      max-height: 180px;
+      width: auto;
+      filter: grayscale(100%);
+      transition: filter 0.3s ease-in-out;
+    }
+
+    .logo-item img:hover {
+      filter: grayscale(0%);
+    }
+
+    @keyframes scroll-left {
+      0% {
+        transform: translateX(0);
+      }
+      100% {
+        transform: translateX(-50%);
+      }
+    }
+  </style>
+
+
        
-<!-- GT Clients Section Start -->
+<!-- GT Commitment Section Start -->
 <section class="gt-game-section section-padding fix py-5">
   <div class="container">
     <div class="gt-section-title-2 text-center">
@@ -959,8 +1008,8 @@
 
     <div class="container-fluid py-5">
       <div class="logo-carousel-wrapper">
-        <div class="logo-track" id="logoTrack1">
-          <!-- Initial Logos for Section 1 -->
+        <div class="logo-track" id="logoTrack">
+          <!-- Initial Logos -->
           <div class="logo-item"><img loading="lazy" src="assets/img/home-1/brand/b-1.avif" alt="Logo 1"></div>
           <div class="logo-item"><img loading="lazy" src="assets/img/home-1/brand/b-2.avif" alt="Logo 2"></div>
           <div class="logo-item"><img loading="lazy" src="assets/img/home-1/brand/b-3.avif" alt="Logo 3"></div>
@@ -970,7 +1019,14 @@
     </div>
   </div>
 </section>
-<!-- GT Clients Section End -->
+<!-- GT brand logo Section End -->
+
+<!-- JavaScript to Clone Logos -->
+<script>
+  const track = document.getElementById('logoTrack');
+  const logos = track.innerHTML;
+  track.innerHTML += logos; // Duplicate once for seamless scroll
+</script>
 
 
 <section class="gaming-hero-section">
@@ -1421,13 +1477,10 @@
 <footer class="entity-footer gt-footer-section">
     <div class="container">
 
-<!-- Footer Logo Section Start -->
-<section class="gt-game-section section-padding fix py-5">
-  <div class="container">
-    <div class="container-fluid py-5">
-      <div class="logo-carousel-wrapper">
-        <div class="logo-track" id="logoTrack2">
-          <!-- Initial Logos for Section 2 -->
+        <!-- Logo Carousel Section -->
+        <div class="logo-carousel-wrapper">
+            <div class="logo-track" id="logoTrack2">
+          <!-- Initial Logos -->
           <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (1).png" alt="Logo 1"></div>
           <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (2).png" alt="Logo 2"></div>
           <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (3).png" alt="Logo 3"></div>
@@ -1440,100 +1493,15 @@
           <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (10).png" alt="Logo 10"></div>
           <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (11).png" alt="Logo 11"></div>
           <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (12).png" alt="Logo 12"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Footer Logo Section End -->
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (13).png" alt="Logo 13"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (14).png" alt="Logo 14"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (15).png" alt="Logo 15"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/footer logos/icon (16).png" alt="Logo 16"></div>
 
-<!-- JavaScript to Clone Logos and Create Seamless Loop -->
-<script>
-  window.onload = () => {
-    // Clone logos for Section 1
-    const track1 = document.getElementById('logoTrack1');
-    const logos1 = track1.children; // Get all logo items in Section 1
-    for (let i = 0; i < logos1.length; i++) {
-      track1.appendChild(logos1[i].cloneNode(true)); // Clone and append each logo item
-    }
 
-    // Clone logos for Section 2
-    const track2 = document.getElementById('logoTrack2');
-    const logos2 = track2.children; // Get all logo items in Section 2
-    for (let i = 0; i < logos2.length; i++) {
-      track2.appendChild(logos2[i].cloneNode(true)); // Clone and append each logo item
-    }
-  };
-</script>
+            </div>
+            </div>
 
-<style>
-  /* ===== Logo Carousel Styles ===== */
-  .logo-carousel-wrapper {
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-    max-width: 100vw;
-    background-color: #0a0a0a00; /* Dark background for contrast */
-  }
-
-  .logo-track {
-    display: flex;
-    width: max-content;
-    will-change: transform; /* Optimizing for animation */
-  }
-
-  /* Animation for Section 1 (Clients Section) */
-  #logoTrack1 {
-    animation: scroll-left-1 30s linear infinite; /* Adjusted speed for faster scroll */
-  }
-
-  /* Animation for Section 2 (Footer Clients Section) */
-  #logoTrack2 {
-    animation: scroll-left-2 40s linear infinite; /* Adjusted speed for footer scroll */
-  }
-
-  .logo-item {
-    max-height: 120px;
-    width: auto;
-    height: 120px;
-    flex: 0 0 auto;
-    padding: 0 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .logo-item img {
-    max-height: 180px;
-    width: auto;
-    filter: grayscale(100%);
-    transition: filter 0.3s ease-in-out;
-  }
-
-  .logo-item img:hover {
-    filter: grayscale(0%);
-  }
-
-  /* Keyframes for Section 1 */
-  @keyframes scroll-left-1 {
-    0% {
-      transform: translateX(0);
-    }
-    100% {
-      transform: translateX(-50%);
-    }
-  }
-
-  /* Keyframes for Section 2 */
-  @keyframes scroll-left-2 {
-    0% {
-      transform: translateX(0);
-    }
-    100% {
-      transform: translateX(-50%);
-    }
-  }
-</style>
         <!-- Main Footer Row -->
         <div class="row">
             <!-- Left Column -->
