--- a/services.html
+++ b/services.html
@@ -1098,8 +1098,10 @@
 
 
 
+
+
 <!-- GT Commitment Section Start -->
-<section class="gt-game-section section-padding fix">
+<section class="gt-game-section section-padding fix py-5">
   <div class="container">
     <div class="gt-section-title-2 text-center">
       <h6 class="subtitle tz-sub-tilte tz-sub-anim text-uppercase tx-subTitle">Our</h6>
@@ -1110,36 +1112,23 @@
       <div class="logo-carousel-wrapper">
         <div class="logo-track" id="logoTrack">
           <!-- Initial Logos -->
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-1.avif" alt="Logo 1"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-2.avif" alt="Logo 2"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-3.avif" alt="Logo 3"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-4.avif" alt="Logo 4"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-1.avif" alt="Logo 1"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-2.avif" alt="Logo 2"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-3.avif" alt="Logo 3"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-4.avif" alt="Logo 4"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-1.avif" alt="Logo 1"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-2.avif" alt="Logo 2"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-3.avif" alt="Logo 3"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-4.avif" alt="Logo 4"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-1.avif" alt="Logo 1"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-2.avif" alt="Logo 2"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-3.avif" alt="Logo 3"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-4.avif" alt="Logo 4"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-1.avif" alt="Logo 1"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-2.avif" alt="Logo 2"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-3.avif" alt="Logo 3"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-4.avif" alt="Logo 4"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-1.avif" alt="Logo 1"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-2.avif" alt="Logo 2"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-3.avif" alt="Logo 3"></div>
-          <div loading="lazy" class="logo-item"><img src="assets/img/home-1/brand/b-4.avif" alt="Logo 4"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/brand/b-1.avif" alt="Logo 1"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/brand/b-2.avif" alt="Logo 2"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/brand/b-3.avif" alt="Logo 3"></div>
+          <div class="logo-item"><img loading="lazy" src="assets/img/home-1/brand/b-4.avif" alt="Logo 4"></div>
         </div>
       </div>
     </div>
   </div>
 </section>
 <!-- GT brand logo Section End -->
+
+<!-- JavaScript to Clone Logos -->
+<script>
+  const track = document.getElementById('logoTrack');
+  const logos = track.innerHTML;
+  track.innerHTML += logos; // Duplicate once for seamless scroll
+</script>
 
 
 
@@ -1287,11 +1276,6 @@
   </div>
 </section>
 
-
-
-
-
-<!-- Footer Styles -->
 
 
 <!-- GT Footer Section Start -->
